# rust-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  alternative.Dockerfile  docker-compose.yml  template.env
.github/workflows/: audit.yml  cicd.yml
benches/: performance.rs
src/: main.rs
src/tests/: unit.rs  unit_tests.rs
src/utils/: config.rs
tests/: integration_tests.rs
