[package]
name = "rust-template"
license = "MIT"
version = "0.1.0"
description = "A base template for getting started"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3 # 0-3
# opt-level = "s" # optimize for size
strip = true # strip symbols from binary
lto = true # enable link time optimization
codegen-units = 1 # maximize size reduction optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

# benchmarking specific
[[bench]]
name = "performance"
harness = false
html_reports = true
